SERVER-60406 Harden $searchMeta implementation in unsharded collection